--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -37,7 +37,7 @@
     <properties>
         <osgi-mock.version>3.2.1-SNAPSHOT</osgi-mock.version>
         <jcr-mock.version>1.5.4</jcr-mock.version>
-        <resourceresolver-mock.version>1.2.2</resourceresolver-mock.version>
+        <resourceresolver-mock.version>1.2.3-SNAPSHOT</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
@@ -284,7 +284,7 @@
         <profile>
             <id>latest-dependency-versions</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencyManagement>
                 <dependencies>
