--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -37,7 +37,7 @@
     <properties>
         <osgi-mock.version>3.3.0</osgi-mock.version>
         <jcr-mock.version>1.6.0</jcr-mock.version>
-        <resourceresolver-mock.version>1.3.0</resourceresolver-mock.version>
+        <resourceresolver-mock.version>1.4.0-SNAPSHOT</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
