--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-    <version>3.3.3-SNAPSHOT</version>
+    <version>3.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Apache Sling Testing Sling Mock Parent</name>
@@ -37,12 +37,12 @@
     <properties>
         <osgi-mock.version>3.3.0</osgi-mock.version>
         <jcr-mock.version>1.6.0</jcr-mock.version>
-        <resourceresolver-mock.version>1.3.0</resourceresolver-mock.version>
+        <resourceresolver-mock.version>1.4.0-SNAPSHOT</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
 
-        <project.build.outputTimestamp>2022-06-30T07:15:29Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2022-08-18T11:38:28Z</project.build.outputTimestamp>
     </properties>
 
     <dependencies>
@@ -268,12 +268,12 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.5.1</version>
+            <version>4.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.5.1</version>
+            <version>4.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
