--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -35,9 +35,9 @@
     <description>Mock implementation of selected Sling APIs.</description>
 
     <properties>
-        <osgi-mock.version>3.3.0</osgi-mock.version>
+        <osgi-mock.version>3.3.2</osgi-mock.version>
         <jcr-mock.version>1.6.0</jcr-mock.version>
-        <resourceresolver-mock.version>1.4.0-SNAPSHOT</resourceresolver-mock.version>
+        <resourceresolver-mock.version>1.4.0</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
