--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,7 +36,7 @@
 
     <properties>
         <osgi-mock.version>3.3.5-SNAPSHOT</osgi-mock.version>
-        <jcr-mock.version>1.6.3-SNAPSHOT</jcr-mock.version>
+        <jcr-mock.version>1.6.4</jcr-mock.version>
         <resourceresolver-mock.version>1.4.0</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
