--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-    <version>3.4.3-SNAPSHOT</version>
+    <version>3.4.4</version>
     <packaging>pom</packaging>
 
     <name>Apache Sling Testing Sling Mock Parent</name>
@@ -42,7 +42,7 @@
         <servlet-helpers.version>1.4.4</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
 
-        <project.build.outputTimestamp>2022-09-12T14:32:57Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2023-03-22T14:03:44Z</project.build.outputTimestamp>
     </properties>
 
     <dependencies>
@@ -424,7 +424,7 @@
     </profiles>
 
   <scm>
-    <tag>org.apache.sling.testing.sling-mock.reactor-3.3.2</tag>
+    <tag>org.apache.sling.testing.sling-mock.reactor-3.4.4</tag>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-sling-mock.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-sling-mock.git</developerConnection>
     <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-testing-sling-mock.git</url>
