--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-            <version>1.6.9-SNAPSHOT</version>
+            <version>${jcr-mock.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.servlet-helpers</artifactId>
-            <version>1.4.7-SNAPSHOT</version>
+            <version>${servlet-helpers.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
