--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -39,7 +39,7 @@
         <jcr-mock.version>1.6.9-SNAPSHOT</jcr-mock.version>
         <resourceresolver-mock.version>1.4.0</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
-        <servlet-helpers.version>1.4.7-SNAPSHOT</servlet-helpers.version>
+        <servlet-helpers.version>1.4.6</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
 
         <project.build.outputTimestamp>2023-04-28T13:49:03Z</project.build.outputTimestamp>
