--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -85,7 +85,8 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.util.converter</artifactId>
-            <version>1.0.0</version>
+            <!-- Versions below 1.0.8 lead to problems converting values to BigDecimal with Java 17 -->
+            <version>1.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
