--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock.core</artifactId>
-            <version>3.3.8</version>
+            <version>3.3.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
